@@ -8383,6 +8383,7 @@ static const char usage[] =
 "tig " TIG_VERSION " (" __DATE__ ")\n"
 "\n"
 "Usage: tig        [options] [revs] [--] [paths]\n"
+"   or: tig log    [options] [revs] [--] [paths]\n"
 "   or: tig show   [options] [revs] [--] [paths]\n"
 "   or: tig blame  [options] [rev] [--] path\n"
 "   or: tig status\n"
@@ -8523,6 +8524,9 @@ parse_options(int argc, const char *argv[])
 
 	} else if (!strcmp(subcommand, "show")) {
 		request = REQ_VIEW_DIFF;
+
+	} else if (!strcmp(subcommand, "log")) {
+		request = REQ_VIEW_LOG;
 
 	} else {
 		subcommand = NULL;
